# wasm-pkg-tools

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-binaries.yml
ci/: get-oras.sh  run-ci.sh
crates/wasm-pkg-client/: Cargo.toml  README.md
crates/wasm-pkg-client/src/: decoded_component.rs  lib.rs  loader.rs  local.rs  metadata.rs  publisher.rs  release.rs
crates/wasm-pkg-client/src/caching/: file.rs  mod.rs
crates/wasm-pkg-client/src/oci/: config.rs  loader.rs  mod.rs  publisher.rs
crates/wasm-pkg-client/src/overlay/: mod.rs
crates/wasm-pkg-client/src/warg/: config.rs  loader.rs  mod.rs  publisher.rs
crates/wasm-pkg-client/tests/: e2e.rs  publish_semver_check.rs
crates/wasm-pkg-client/tests/e2e/: Cargo.toml
crates/wasm-pkg-client/tests/e2e/src/: main.rs
crates/wasm-pkg-common/: Cargo.toml
crates/wasm-pkg-common/src/: config.rs  digest.rs  label.rs  lib.rs  metadata.rs  oci.rs  package.rs  registry.rs
crates/wasm-pkg-common/src/config/: mod.rs  oci.rs  toml.rs  warg.rs
crates/wasm-pkg-core/: Cargo.toml
crates/wasm-pkg-core/src/: config.rs  lib.rs  lock.rs  manifest.rs  resolver.rs  wit.rs
crates/wasm-pkg-core/src/manifest/: paths.rs  workspace.rs
crates/wasm-pkg-core/tests/: build.rs  common.rs  fetch.rs
crates/wasm-pkg-core/tests/fixtures/cli-example/: Cargo.toml
crates/wasm-pkg-core/tests/fixtures/cli-example/wit/: world.wit
crates/wasm-pkg-core/tests/fixtures/dog-fetcher/: Cargo.toml
crates/wasm-pkg-core/tests/fixtures/dog-fetcher/.cargo/: config.toml
crates/wasm-pkg-core/tests/fixtures/dog-fetcher/src/: lib.rs
crates/wasm-pkg-core/tests/fixtures/nested-local/local-dep/wit/: world.wit
crates/wasm-pkg-core/tests/fixtures/nested-local/project/wit/: world.wit
crates/wasm-pkg-core/tests/fixtures/transitive-local/: wkg.toml
crates/wasm-pkg-core/tests/fixtures/transitive-local/example-a/wit/: world.wit
crates/wasm-pkg-core/tests/fixtures/transitive-local/example-b/wit/: world.wit
crates/wasm-pkg-core/tests/fixtures/transitive-local/example-c/wit/: world.wit
crates/wasm-pkg-core/tests/fixtures/transitive-local/example-c/wit/nested/: nested.wit
crates/wasm-pkg-core/tests/fixtures/transitive-local/example-d/wit/: world.wit
crates/wasm-pkg-loader/: Cargo.toml  README.md
crates/wasm-pkg-loader/src/: config.rs  label.rs  lib.rs  main.rs  meta.rs  oci.rs  package.rs  release.rs  source.rs  warg.rs
crates/wasm-pkg-loader/src/config/: mod.rs  oci.rs  toml.rs  warg.rs
crates/wasm-pkg-loader/src/oci/: source.rs
crates/wasm-pkg-loader/src/source/: local.rs  mod.rs  oci.rs  warg.rs
crates/wasm-pkg-loader/src/source/oci/: config.rs
crates/wasm-pkg-loader/src/source/warg/: config.rs
crates/wasm-pkg-loader/src/warg/: source.rs
crates/wasm-pkg-loader/tests/e2e/: Cargo.toml
crates/wasm-pkg-loader/tests/e2e/src/: main.rs
crates/wkg/: Cargo.toml
crates/wkg-core/: Cargo.toml
crates/wkg-core/src/: config.rs  lib.rs  lock.rs  resolver.rs  wit.rs
crates/wkg-core/tests/: build.rs  common.rs  fetch.rs
crates/wkg-core/tests/fixtures/cli-example/: .gitignore
crates/wkg-core/tests/fixtures/cli-example/src/: lib.rs
crates/wkg-core/tests/fixtures/cli-example/wit/: world.wit
crates/wkg-core/tests/fixtures/dog-fetcher/: .gitignore
crates/wkg-core/tests/fixtures/dog-fetcher/wit/: world.wit
crates/wkg/src/: main.rs  oci.rs  overlay.rs  package_spec.rs  warg.rs  wit.rs
crates/wkg/tests/: common.rs  e2e.rs
crates/wkg/tests/fixtures/fetch-workspace/: wkg.toml
crates/wkg/tests/fixtures/fetch-workspace/fetch-a/wit/: world.wit
crates/wkg/tests/fixtures/fetch-workspace/fetch-d/wit/: world.wit
crates/wkg/tests/fixtures/wasi-http/: wkg.toml
crates/wkg/tests/fixtures/wasi-http/wit/: types.wit
