[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.11.0"
authors = ["The Wasmtime Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1.8"
docker_credential = "1.2.1"
etcetera = "0.8"
futures-util = "0.3.30"
oci-client = { version = "0.14", default-features = false, features = [
    "rustls-tls",
] }
oci-wasm = { version = "0.2.1", default-features = false, features = [
    "rustls-tls",
] }
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3.10.1"
testcontainers = { version = "0.23" }
thiserror = "1.0"
tokio = "1.44.2"
tokio-util = "0.7.10"
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "env-filter",
] }
wasm-pkg-common = { version = "0.11.0", path = "crates/wasm-pkg-common" }
wasm-pkg-client = { version = "0.11.0", path = "crates/wasm-pkg-client" }
wasm-pkg-core = { version = "0.11.0", path = "crates/wasm-pkg-core" }
wasm-metadata = "0.235"
wit-component = "0.235"
wit-parser = "0.235"
