[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.16.0"
authors = ["The Wasmtime Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
wasm-pkg-client = { version = "0.16.0", path = "crates/wasm-pkg-client" }
wasm-pkg-common = { version = "0.16.0", path = "crates/wasm-pkg-common" }
wasm-pkg-core = { version = "0.16.0", path = "crates/wasm-pkg-core" }

anstream = "0.6"
anstyle = "1.0"
anyhow = "1"
async-trait = "0.1.77"
base64 = "0.22"
bytes = "1.11"
clap = "4.5"
colorchoice-clap = "1.0"
docker_credential = "1.3.2"
etcetera = "0.11"
futures-util = "0.3.30"
glob = "0.3.3"
http = "1.1.0"
indexmap = "2.5"
oci-client = { version = "0.16", default-features = false, features = [ "rustls-tls" ] }
oci-wasm = { version = "0.4", default-features = false, features = [ "rustls-tls" ] }
petgraph = "0.8.3"
rcgen = "0.14.8"
reqwest = { version = "0.12.0", default-features = false }
rstest = "0.23"
secrecy = "0.8"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3.10.1"
testcontainers = "0.25.2"
thiserror = "1.0"
tokio = "1.44.2"
tokio-util = "0.7.10"
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [ "fmt", "env-filter" ] }
url = "2.5.0"
warg-client = "0.9.2"
warg-crypto = "0.9.2"
warg-protocol = "0.9.2"
wasm-metadata = "0.244"
wit-component = "0.244"
wit-parser = "0.244"

# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[workspace.metadata.typos.default]
extend-ignore-re = [
    "\\d\\w{4,}\\d",
]
extend-ignore-words-re = [
    '^[a-zA-Z]{1,3}$' # ignore words up to length 3
]

[workspace.metadata.typos.default.extend-words]
# strategy shorthand
strat = "strat"
