[package]
name = "wasm-pkg-client"
description = "Wasm package client"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wasm-pkg-client"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[features]
default = ["_local"]
# An internal feature for making sure e2e tests can run locally but not in CI for Mac or Windows
_local = []

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.77"
base64 = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
docker_credential = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
secrecy = { version = "0.8", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = { workspace = true, features = ["io", "io-util", "codec"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.0"
warg-client = "0.9.0"
warg-crypto = "0.9.0"
wasm-metadata = { workspace = true }
warg-protocol = "0.9.0"
wasm-pkg-common = { workspace = true, features = ["metadata-client", "tokio"] }
wit-component = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
testcontainers = { workspace = true }
