[package]
name = "wasm-pkg-client"
description = "Wasm package client"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wasm-pkg-client"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[features]
default = ["docker-tests"]
# This feature enables tests that use Docker
docker-tests = []

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.77"
base64 = { workspace = true }
bytes = { workspace = true }
docker_credential = { workspace = true }
etcetera = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
reqwest = { version = "0.12.0", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
]}
secrecy = { version = "0.8", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = { workspace = true, features = ["io", "io-util", "codec"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.0"
wasm-metadata = { workspace = true }
wasm-pkg-common = { workspace = true, features = ["registry-config"] }
wit-component = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
testcontainers = { workspace = true }
