[package]
name = "wasm-pkg-client"
description = "Wasm package client"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[features]
default = ["docker-tests"]
# This feature enables tests that use Docker
docker-tests = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
docker_credential = { workspace = true }
etcetera = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
reqwest = { workspace = true, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = { workspace = true, features = ["io", "io-util", "codec"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
wasm-metadata = { workspace = true }
wasm-pkg-common = { workspace = true, features = ["registry-config"] }
wit-component = { workspace = true, features = ["semver-check"] }
wit-parser = { workspace = true }
petgraph = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
rstest = { workspace = true }
testcontainers = { workspace = true }
