[package]
name = "wasm-pkg-common"
description = "Wasm Package common types and configuration"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wasm-pkg-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[features]
metadata-client = ["dep:reqwest"]
tokio = ["dep:tokio"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
http = "1.1.0"
reqwest = { version = "0.12.0", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
], optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "fs"], optional = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
