[package]
name = "wasm-pkg-common"
description = "Wasm Package common types and configuration"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wasm-pkg-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[features]
registry-config = [
    "dep:etcetera",
    "dep:tokio",
    "dep:toml",
]
# Extra features to facilitate making working with OCI images easier
oci_extras = []

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
etcetera = { workspace = true, optional = true }
futures-util = { workspace = true }
http = "1.1.0"
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs"] }
toml = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
