[package]
name = "wasm-pkg-common"
description = "Wasm Package common types and configuration"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[features]
registry-config = [
    "dep:etcetera",
    "dep:tokio",
    "dep:toml",
]
# Extra features to facilitate making working with OCI images easier
oci_extras = []

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
etcetera = { workspace = true, optional = true }
futures-util = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
], optional = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs"] }
toml = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
