[package]
name = "wasm-pkg-core"
description = "Wasm Package Tools core libraries for wkg"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wasm-pkg-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
ansi-term-output = ["wasm-pkg-common/ansi-term-output"]
# running `cargo test` (implicit `--workspace` flag), leaks `ansi-term-output` from wkg
test = ["wasm-pkg-common/test"]

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-util = { workspace = true, features = ["io", "io-util", "codec"] }
toml = { workspace = true }
tracing = { workspace = true }
wasm-metadata = { workspace = true }
wasm-pkg-common = { workspace = true }
wasm-pkg-client = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
petgraph = { workspace = true }

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Console",
]

[dev-dependencies]
tempfile = { workspace = true }
sha2 = { workspace = true }
rstest = { workspace = true }
glob = { workspace = true }
