[package]
name = "wasm-pkg-loader"
description = "Wasm package loader"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wasm-pkg-loader"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.77"
base64 = { workspace = true }
bytes = "1.5.0"
dirs = "5.0.1"
docker_credential = "1.2.1"
futures-util = { version = "0.3.29", features = ["io"] }
oci-distribution = { workspace = true }
oci-wasm = { workspace = true }
reqwest = { version = "0.12.0", features = ["json"] }
secrecy = { workspace = true, features = ["serde"] }
semver = { workspace = true }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
sha2 = "0.10.8"
thiserror = "1.0.51"
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { workspace = true }
wasm-pkg-common = { workspace = true }
warg-client = { workspace = true }
warg-protocol = "0.7.0"
