[package]
name = "wkg"
description = "Wasm Package Tools CLI"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wkg"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
docker_credential = { workspace = true }
futures-util = { version = "0.3.29", features = ["io"] }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
tempfile = "3.10.1"
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-pkg-common = { workspace = true }
wasm-pkg-client = { workspace = true }
wit-component = { workspace = true }

[dev-dependencies]
base64 = "0.22.1"
serde_json = "1.0.118"
