[package]
name = "wkg"
description = "Wasm Package Tools CLI"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wkg"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
dirs = { workspace = true }
docker_credential = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-process = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-pkg-common = { workspace = true }
wasm-pkg-client = { workspace = true }
wit-component = { workspace = true }
wasm-pkg-core = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
