[package]
name = "wkg"
description = "Wasm Package Tools CLI"
repository = "https://github.com/bytecodealliance/wasm-pkg-tools/tree/main/crates/wkg"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[features]
default = ["docker-tests"]
# This feature enables tests that use Docker
docker-tests = []

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help", "env"] }
colorchoice-clap = { workspace = true }
docker_credential = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }
wasm-pkg-common = { workspace = true }
wasm-pkg-client = { workspace = true }
wit-component = { workspace = true }
wasm-pkg-core = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
